package edu.fiuba.algo3.clases;

public class Agile implements Ability {
    @Override
    public void effect() {

    }
}
