package edu.fiuba.algo3.modelo.card;

public abstract class AbstractCard {
    protected String name;


    public AbstractCard(String name) {
        this.name = name;

    }
    public String getName() { return name;}

}
