package edu.fiuba.algo3.modelo.effect;

public interface SpecialEffect {
    void apply();
}